syntax="proto3";

option go_package = "./";

package proto;

service Fibonacci{
    rpc GetFibSlice (FibRequest) returns (FibResponse) {};
}

message FibRequest{
    uint64 a = 1;
    uint64 b = 2;
}

message FibResponse{
    repeated uint64 res = 1;
}